@@ -2,7 +2,7 @@
 # control starting, stopping, or restarting amd.
 # usage: ctl-amd [start|stop|status|restart|condrestart|reload]
 #
-# Package:	am-utils-6.1
+# Package:	am-utils-6.x
 # Author:	Erez Zadok <ezk@cs.columbia.edu>
 #
 # chkconfig: - 72 28
@@ -61,15 +61,15 @@ return 1
 }
 
 # search for amd.conf file
-CF_FILE="${prefix}/etc/amd.conf"
+CF_FILE="@sysconfdir@/amd.conf"
 # any local copy of the conf file overrides the "global" one
 if [ -f /etc/amd.conf ]
 then
 	CF_FILE="/etc/amd.conf"
 fi
-if [ -f ${prefix}/etc/amd.conf ]
+if [ -f @sysconfdir@/amd.conf ]
 then
-	CF_FILE="${prefix}/etc/amd.conf"
+	CF_FILE="@sysconfdir@/amd.conf"
 fi
 if [ -f /etc/local/amd.conf ]
 then
