@@ -1,6 +1,6 @@
 #!@PERL@ -sw
 #
-# Package:	am-utils-6.0
+# Package:	am-utils-6.x
 # Author:	James Tanis <jtt@cs.columbia.edu>
 #
 
